# GraphRAG-Compliance-Navigator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
design/: README.md
design/adrs/: ADR-001-langchain-for-llm-orchestration.md  ADR-002-neo4j-over-alternatives.md  ADR-003-in-memory-vector-store-for-prototyping.md  ADR-004-parallel-hybrid-retrieval.md  ADR-005-pydantic-v2-domain-models.md
design/c4-diagrams/: 01-context.md  02-container.md  03-component.md  04-code.md
src/ingestion/: extractor.py
src/retrieval/: search.py
src/storage/: graph.py
tests/: test_retrieval.py
